--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<build>
 		<finalName>first.servlet</finalName>
 	</build>
-  
+
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -30,6 +30,16 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
 		</dependency>
 	</dependencies>
 </project>
